package eu.telecomnancy.javafx.rdv;

public interface RdvState {
    public void confirme();
    public void annule();
    public void archive();
}
