package eu.telecomnancy.javafx.rdv;

public class Rdv_en_attente implements RdvState {
    @Override
    public void confirme() {

    }

    @Override
    public void annule() {

    }

    @Override
    public void archive() {

    }
}
