@startuml

class MyRdv #Gold{
}


class Gestionnaire_Rdv #SpringGreen{
createRdv(list<id_eleve>,id_professeur,date,creneau,lieu,motif,description)
getRdv(id_rdv)
destroyRdv(rdv)
}

class Gestionnaire_Compte #Fuchsia{
createCompte(id,mdp,nom,prenom,email,tel,adress)
}

class Planning #Aqua{
Planning()
addRdvToPlanning(rdv)
deleteRdv(rdv)
}

class Professeur #MistyRose{
id_professeur
Professeur(nom,prenom,
}

class Eleve #NavajoWhite{
id_eleve
Eleve(s,id_prestation,date)
addRdvToPlanning(rdv,e)
}

class Rdv_en_attente #TECHNOLOGY{
}

class Rdv_annulé #TECHNOLOGY{
}

class Rdv_confirmé #TECHNOLOGY{
}

class Rdv_archivé #TECHNOLOGY{

}



class Interface #Aquamarine{
}


abstract class Compte #Fuchsia{
id
mdp
nom
prenom
email
tel
adress
Compte(id,mdp,nom,prenom,email,tel,adress)
getPlanning()
}

class Lieu #Coral{
}

abstract class Rendez_vous #SpringGreen{
id_rdv
date
horaire
Rendez_Vous(list<id_eleve>,id_professeur,date,creneau,lieu,motif,description)
getPlanning()
getEmployéAvailable(s,id_prestation,date)
addRdvToPlanning(rdv,e)
}

interface Rdv_state #SpringGreen {
confirme()
annule()
archive(rdv)
}



Compte <|--  Professeur
Compte <|--  Eleve

Interface -- MyRdv
Rdv_state <|--  Rdv_en_attente
Rdv_state <|--  Rdv_annulé
Rdv_state <|--  Rdv_confirmé
Rdv_state <|--  Rdv_archivé
Rdv_state "1" -- Rendez_vous

MyRdv -- Gestionnaire_Rdv

MyRdv -- Gestionnaire_Compte

Gestionnaire_Rdv o-- Rendez_vous
Gestionnaire_Compte --o Compte
Professeur -- Planning

Lieu "1" -- Rendez_vous
Rendez_vous "0" -- "1" Professeur
Rendez_vous "0" -- "*" Eleve

@enduml